# goit-pyweb-hw-07

SQL_Alchemy_HW_07/: alembic.ini  db_config.py  docker-compose.yml  models.py  my_select.py  pyproject.toml  seed.py
SQL_Alchemy_HW_07/alembic/versions/: 13d12942415b_init.py  2929e1dde827_init.py  59edcd88a8e7_init.py  7e892f986853_initial_migration.py  a385752b862a_init.py
